--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "description": "console app for thredz",
   "main": "index.js",
-  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "rm -f jest.config.js && jest",
+    "prepare": "cp ./src/hyperswarm.d.ts ./node_modules/hyperswarm/index.d.ts && cp ./src/vorpal.d.ts ./node_modules/@moleculer/vorpal/index.d.ts && cp ./src/openspv.d.ts ./node_modules/openspv/index.d.ts && tsc"
   },
-  "repository": {
+  "repository": { 
     "type": "git",
     "url": "git+https://github.com/dfoderick/thredz-cli.git"
   },
@@ -30,9 +30,33 @@
     "openspv": "^3.0.29"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.5",
+    "@babel/preset-env": "^7.18.2",
+    "@babel/preset-typescript": "^7.17.12",
+    "@types/jest": "^28.1.1",
+    "@types/long": "^4.0.2",
     "@types/node": "^17.0.41",
     "@types/vorpal": "^1.12.2",
+    "babel-jest": "^28.1.1",
+    "jest": "^28.1.1",
+    "ts-jest": "^28.0.4",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.3"
+  },
+  "jest": {
+    "setupFiles": [
+      "dotenv/config"
+    ],
+    "testPathIgnorePatterns": [
+      "dist"
+    ],
+    "transform": {
+      "\\.tsx?$": [
+        "ts-jest",
+        {
+          "configFile": "./.babelrc.jest.cjs"
+        }
+      ]
+    }
   }
 }
