--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "scripts": {
     "test": "rm -f jest.config.js && jest",
     "prepare": "cp ./src/hyperswarm.d.ts ./node_modules/hyperswarm/index.d.ts && cp ./src/vorpal.d.ts ./node_modules/@moleculer/vorpal/index.d.ts && cp ./src/openspv.d.ts ./node_modules/openspv/index.d.ts && tsc",
-    "thredz" : "npx ts-node thredz"
+    "thredz": "npx ts-node thredz",
+    "start": "npx ts-node thredz",
+    "build": "tsc"
   },
-  "repository": { 
+  "repository": {
     "type": "git",
     "url": "git+https://github.com/dfoderick/thredz-cli.git"
   },
@@ -26,7 +28,7 @@
     "@moleculer/vorpal": "^1.11.5",
     "hyperswarm": "^2.15.3",
     "long": "^5.2.0",
-    "moneystream-wallet": "^0.2.15",
+    "moneystream-wallet": "^0.2.16",
     "node-fetch": "^3.2.5",
     "openspv": "^3.0.29"
   },
